2015-03-27 Ben Shi <powerstudio1st AT 163 DOT com>
	* sdas/as6808/Makefile.in:
	* sdas/as8051/Makefile.in:
	* sdas/as8xcxxx/Makefile.in:
	* sdas/asgb/Makefile.in:
	* sdas/asrab/Makefile.in:
	* sdas/asstm8/Makefile.in:
	* sdas/astlcs90/Makefile.in:
	* sdas/asz80/Makefile.in:
	* sdas/linksrc/Makefile.in:
	* src/Makefile.in:
	* support/cpp/Makefile.in:
	* support/librarian/Makefile.in:
	* support/makebin/Makefile.in:
	* support/packihx/Makefile.in:
	* support/scripts/Makefile.in:
	  Support --program-prefix and --program-suffix.

2015-03-26 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/sdbinutils/libiberty/Makefile.in:
	  Disable make install.
	* support/sdbinutils/binutils/Makefile.in:
	* support/sdbinutils/Makefile.in:
	  Support make uninstall.
	* device/non-free/lib/Makefile.in:
	  Apply patch #245 by David Grayson.

2015-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Peepholes for optimizing jump on decrement.

2015-03-20 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCglue.c:
	  Improve error messages.

2015-03-19 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCglue.c:
	  Fix a bug in a global char array initialized by a string.
	* src/SDCCast.c:
	  Fix a bug in a local static global array initialization.
	* support/regression/tests/bug-1953.c:
	  Improve test case.
	* doc/sdccman.lyx:
	  Suggest msys while build SDCC with VS2010.

2015-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2288.

2015-03-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/z80/crt0.s: cosmetics
	* sdas/asstm8/sdasstm8.vcxproj,
	* sdas/asstm8/sdasstm8.vcxproj.filters: new, added
	* sdcc.sln: added sdasstm8

2015-03-12 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCerr.c:
	* src/SDCCerr.h:
	* src/SDCC.y:
	  Add a new warning: anonymous member in struct/union.

2015-03-11 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCval.c:
	* src/SDCCglue.c:
	  Add a new special case in pointer initialization.